<resources>
    <string name="app_name">xSangoshthi_Receiver</string>

    <string name="register_minLen_name">1</string>
    <string name="register_len_phoneNum">12</string>

    <string name="toast_wrong_name">Enter Name</string>
    <string name="toast_wrong_phoneNum">Enter Your 10 Digit Phone Number</string>

    <string name="picker_add_photo">ADD PHOTO</string>
    <string name="picker_add_video">ADD VIDEO</string>
    <string name="picker_add_story">MAKE NEW STORY</string>
    <string name="picker_gallery">VIEW PHOTOS/VIDEOS</string>
    <string name="picker_participate">PARTICIPATE</string>


    <string name="server_client_id">849083346543-3nh3ppr0b4tpgltfe2h1ita104jqk5sm.apps.googleusercontent.com/</string>
</resources>
